<resources>
    <string name="app_name"><font name='montserrat' size='18'>SERENO</font></string>
    <string name="title_activity_scroll_based_activtiy">ScrollingActivity</string>
    <string name="retry_device_connected">Please reconnect the device</string>

    <string name="dropdown_label1"><font size='18'>Self-exam result:</font></string>
    <string name="dropdown_label2"><font size='18'>GP or Women\'s exam result:</font></string>
    <string name="dropdown_label3"><font size='18'>Mamography result:</font></string>
    <string name="dropdown_label4"><font size='18'>Sonography result:</font></string>
    <string name="dropdown_label5"><font size='18'>Pathology result:</font></string>

    <string-array name="dropdown_items">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Inconclusive</font></item>
        <item><font size='12'>normal</font></item>
        <item><font size='12'>benign</font></item>
        <item><font size='12'>probably benign</font></item>
        <item><font size='12'>suspicious</font></item>
        <item><font size='12'>highly suspicious</font></item>
    </string-array>
    <string-array name="tumor_side">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Right Breast</font></item>
        <item><font size='12'>Left Breast</font></item>
    </string-array>
    <string-array name="tumor_size">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'> less than 2cm</font></item>
        <item><font size='12'> between 2 and 5 cm</font></item>
        <item><font size='12'> bigger than 5 cm</font></item>
        <item><font size='12'>Unknown</font></item>

    </string-array>
    <string-array name="cancer_type">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Breast Cancer</font></item>
        <item><font size='12'>Thyroid Cancer</font></item>
        <item><font size='12'>Skin Cancer</font></item>
        <item><font size='12'>Prostate Cancer</font></item>
        <item><font size='12'>Testicular Cancer</font></item>
        <item><font size='12'>Others</font></item>
    </string-array>
    <string-array name="relationship">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>1st Degree Relatives</font></item>
        <item><font size='12'>2nd Degree Relatives</font></item>
        <item><font size='12'>Distant Relatives</font></item>
        <item><font size='12'>Others</font></item>
    </string-array>
    <string-array name="menopausal">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Premenopause</font></item>
        <item><font size='12'>Perimenopause</font></item>
        <item><font size='12'>Postmenopause</font></item>
        <item><font size='12'>Hysterectomized</font></item>
        <item><font size='12'>Not Applicable</font></item>

    </string-array>
    <string-array name="gender">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Male</font></item>
        <item><font size='12'>Female</font></item>
        <item><font size='12'>Undeclared</font></item>
        <item><font size='12'>Others</font></item>
    </string-array>
    <string-array name="race">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>R1</font></item>
        <item><font size='12'>R2</font></item>
        <item><font size='12'>R3</font></item>
        <item><font size='12'>Others</font></item>
    </string-array>
    <string-array name="adherence">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>Strictly Compliant</font></item>
        <item><font size='12'>Compliant</font></item>
        <item><font size='12'>Sometimes Compliant</font></item>
        <item><font size='12'>Rarely Compliant</font></item>
        <item><font size='12'>Non-compliant</font></item>
        <item><font size='12'>Other</font></item>
    </string-array>
    <string-array name="medication">
        <item><font size='12'>Please Select ...</font></item>
        <item><font size='12'>M1</font></item>
        <item><font size='12'>M2</font></item>
        <item><font size='12'>M3</font></item>
        <item><font size='12'>M4</font></item>
        <item><font size='12'>Other</font></item>
    </string-array>

    <array name="com_google_android_gms_fonts_certs">
        <item>@array/com_google_android_gms_fonts_certs_dev</item>
        <item>@array/com_google_android_gms_fonts_certs_prod</item>
    </array>
    <string-array name="com_google_android_gms_fonts_certs_dev">
        <item>
            MIIEqDCCA5CgAwIBAgIJANWFuGx90071MA0GCSqGSIb3DQEBBAUAMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTAeFw0wODA0MTUyMzM2NTZaFw0zNTA5MDEyMzM2NTZaMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBANbOLggKv+IxTdGNs8/TGFy0PTP6DHThvbbR24kT9ixcOd9W+EaBPWW+wPPKQmsHxajtWjmQwWfna8mZuSeJS48LIgAZlKkpFeVyxW0qMBujb8X8ETrWy550NaFtI6t9+u7hZeTfHwqNvacKhp1RbE6dBRGWynwMVX8XW8N1+UjFaq6GCJukT4qmpN2afb8sCjUigq0GuMwYXrFVee74bQgLHWGJwPmvmLHC69EH6kWr22ijx4OKXlSIx2xT1AsSHee70w5iDBiK4aph27yH3TxkXy9V89TDdexAcKk/cVHYNnDBapcavl7y0RiQ4biu8ymM8Ga/nmzhRKya6G0cGw8CAQOjgfwwgfkwHQYDVR0OBBYEFI0cxb6VTEM8YYY6FbBMvAPyT+CyMIHJBgNVHSMEgcEwgb6AFI0cxb6VTEM8YYY6FbBMvAPyT+CyoYGapIGXMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbYIJANWFuGx90071MAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEEBQADggEBABnTDPEF+3iSP0wNfdIjIz1AlnrPzgAIHVvXxunW7SBrDhEglQZBbKJEk5kT0mtKoOD1JMrSu1xuTKEBahWRbqHsXclaXjoBADb0kkjVEJu/Lh5hgYZnOjvlba8Ld7HCKePCVePoTJBdI4fvugnL8TsgK05aIskyY0hKI9L8KfqfGTl1lzOv2KoWD0KWwtAWPoGChZxmQ+nBli+gwYMzM1vAkP+aayLe0a1EQimlOalO762r0GXO0ks+UeXde2Z4e+8S/pf7pITEI/tP+MxJTALw9QUWEv9lKTk+jkbqxbsh8nfBUapfKqYn0eidpwq2AzVp3juYl7//fKnaPhJD9gs=
        </item>
    </string-array>
    <string-array name="com_google_android_gms_fonts_certs_prod">
        <item>
            MIIEQzCCAyugAwIBAgIJAMLgh0ZkSjCNMA0GCSqGSIb3DQEBBAUAMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDAeFw0wODA4MjEyMzEzMzRaFw0zNjAxMDcyMzEzMzRaMHQxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MRQwEgYDVQQKEwtHb29nbGUgSW5jLjEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBAKtWLgDYO6IIrgqWbxJOKdoR8qtW0I9Y4sypEwPpt1TTcvZApxsdyxMJZ2JORland2qSGT2y5b+3JKkedxiLDmpHpDsz2WCbdxgxRczfey5YZnTJ4VZbH0xqWVW/8lGmPav5xVwnIiJS6HXk+BVKZF+JcWjAsb/GEuq/eFdpuzSqeYTcfi6idkyugwfYwXFU1+5fZKUaRKYCwkkFQVfcAs1fXA5V+++FGfvjJ/CxURaSxaBvGdGDhfXE28LWuT9ozCl5xw4Yq5OGazvV24mZVSoOO0yZ31j7kYvtwYK6NeADwbSxDdJEqO4k//0zOHKrUiGYXtqw/A0LFFtqoZKFjnkCAQOjgdkwgdYwHQYDVR0OBBYEFMd9jMIhF1Ylmn/Tgt9r45jk14alMIGmBgNVHSMEgZ4wgZuAFMd9jMIhF1Ylmn/Tgt9r45jk14aloXikdjB0MQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEUMBIGA1UEChMLR29vZ2xlIEluYy4xEDAOBgNVBAsTB0FuZHJvaWQxEDAOBgNVBAMTB0FuZHJvaWSCCQDC4IdGZEowjTAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBBAUAA4IBAQBt0lLO74UwLDYKqs6Tm8/yzKkEu116FmH4rkaymUIE0P9KaMftGlMexFlaYjzmB2OxZyl6euNXEsQH8gjwyxCUKRJNexBiGcCEyj6z+a1fuHHvkiaai+KL8W1EyNmgjmyy8AW7P+LLlkR+ho5zEHatRbM/YAnqGcFh5iZBqpknHf1SKMXFh4dd239FJ1jWYfbMDMy3NS5CTMQ2XFI1MvcyUTdZPErjQfTbQe3aDQsQcafEQPD+nqActifKZ0Np0IS9L9kR/wbNvyz6ENwPiTrjV2KRkEjH78ZMcUQXg0L3BYHJ3lc69Vs5Ddf9uUGGMYldX3WfMBEmh/9iFBDAaTCK
        </item>
    </string-array>

    <string name="scroll_based">Scroll Based</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="string_send">Done</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_field">Required Field</string>
    <string name="toast_sent">Message sent</string>
    <string name="add_note">Add Notes:</string>
    <string name="comment_here">note here ...</string>
    <string name="note_title">Doctor Description</string>
    <string name="string_message_cancel">Message canceled</string>


    <string name="connected">connected</string>
    <string name="full_column">:</string>
    <string name="frame_rate">FPS</string>
    <string name="none">none</string>
    <string name="not_connected">not connected</string>
    <string name="permission">Permission</string>
    <string name="granted">granted</string>
    <string name="denied">denied</string>
    <string name="required_permission_camera">Required camera to continue</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_required">Camera permission required</string>
    <string name="please_wait_to_load">Please wait loading…</string>
    <string name="please_connect">Please Connect Device</string>
    <string name="error">Error</string>
    <string name="no_errors">No errors</string>
    <string name="something_when_wrong">Oops! Something when wrong. Please try again after sometime.</string>
    <string name="depth_point">Depth point</string>
    <string name="flirone">Flirone</string>
    <string name="running_background">Running in background</string>
    <string name="notfiy_channel_name">Hardware Service</string>
    <string name="channel_description">Run the hardware service</string>
</resources>